--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -92,15 +92,15 @@
         <div class="add-building">
           <div>
             <h3>ชื่ออาคาร</h3>
-            <input type="text" id="building-name">
+            <input type="text" id="building-name" placeholder="เช่น อาคารวิศวกรรมศาสตร์ 1">
           </div>
           <div>
             <h3>รูปอาคาร</h3>
-            <input type="text" id="building-image">
+            <input type="text" id="building-image" value="https://upload.wikimedia.org/wikipedia/th/f/f6/EngCU_Gear.png">
           </div>
           <div>
             <h3>จำนวนชั้น</h3>
-            <input type="number" id="building-floor">
+            <input type="number" id="building-floor" placeholder="เช่น 3 ชั้น">
           </div>
           <div>
             <h3>รายละเอียดตึก</h3>
@@ -108,11 +108,11 @@
           </div>
           <div>
             <h3>เวลาเปิด</h3>
-            <textarea name="" id="building-open" cols="30" rows="5"></textarea>
+            <textarea name="" id="building-open" cols="30" rows="5" placeholder="วันจันทร์-วันศุกร์ 7.00 - 18.00"></textarea>
           </div>
           <div>
             <h3>เวลาปิด</h3>
-            <textarea name="" id="building-close" cols="30" rows="5"></textarea>
+            <textarea name="" id="building-close" cols="30" rows="5" placeholder="วันเสาร์,วันอาทิตย์"></textarea>
           </div>
           <div class="button">
             <button class="addbutton" id="addbutton">ADD</button>
